force-app/main/default/objects/AIMessageReadyEvent__e/AIMessageReadyEvent__e.object-meta.xml
<CustomObject>
    <description>Published by AiMessageProcessingQueueable once an AI Agent&apos;s reply AIConversationMessage__c has been committed, so the chat LWC&apos;s empApi subscription knows to fetch and render it. Published after commit (not immediately) since subscribers need the message record to actually exist and be queryable when they receive this event.</description>
    <label>AI Message Ready Event</label>
    <pluralLabel>AI Message Ready Events</pluralLabel>
</CustomObject>