force-app/main/default/objects/AIMessageReadyEvent__e/fields/AIConversationId__c.field-meta.xml
<CustomField>
    <fullName>AIConversationId__c</fullName>
    <description>The AIConversation__c this reply belongs to - subscribers filter on this to know whether the event is for the conversation they have open.</description>
    <label>AI Conversation Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>