force-app/main/default/objects/AIMessageReadyEvent__e/fields/AIConversationMessageId__c.field-meta.xml
<CustomField>
    <fullName>AIConversationMessageId__c</fullName>
    <description>The Id of the AI Agent&apos;s reply AIConversationMessage__c record, already committed by the time this event is received. Blank when IsSuccess__c is false, since no reply message was created.</description>
    <label>AI Conversation Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>