force-app/main/default/objects/AIMessageReadyEvent__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>A user-facing message to show in the chat UI when IsSuccess__c is false. The underlying exception detail is logged separately via AIPlatformLogManager, not exposed here.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>