force-app/main/default/objects/AIMessageReadyEvent__e/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether AiMessageProcessingQueueable finished this turn successfully. False means ErrorMessage__c is populated and no reply message exists.</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>